plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.6'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.kurt'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation group: 'com.corundumstudio.socketio', name: 'netty-socketio', version: '1.7.17'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.7.5'
	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
	implementation 'javax.xml.bind:jaxb-api:2.2.4'
	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
	compileOnly 'org.projectlombok:lombok'
	// compileOnly 'javax.xml.bind:jaxb-api:2.1'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
//	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// testImplementation group: 'com.h2database', name: 'h2', version: '2.2.220'
}

tasks.named('test') {
	useJUnitPlatform()
}
